css/main.css
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,500;0,700;0,900;1,500;1,700;1,900&display=swap');

:root {
    /* put colors here!!!!! */
    --secondaryColor: hsl(225, 100%, 94%);
    --primaryColor: hsl(245, 75%, 52%);
    --cardBgColor: hsl(225, 100%, 98%);
    --subtitlTextColor: hsl(224, 23%, 55%);
    --textTitleColor: hsl(223, 47%, 23%);
    --hoverColor:#766cf1;
    --margin: 16px;
}



* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}


body {
    
    font-size: 16px;
    font-family: 'Red Hat Display',
        sans-serif;
    width: 100%;
    height: 100vh;
    padding: var(--margin);
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: url('/images/pattern-background-desktop.svg');
    background-repeat: no-repeat;
    background-size: 100% 50%;
    background-color: var(--secondaryColor);
}

a {
    color: var(--primaryColor);
    font-weight: 700;
}

a:hover{
    
    color: var(--hoverColor);
    text-decoration: none;
}
.btn-primary:hover{
    background-color: var(--hoverColor);
}

.btn-link:hover{
    color:var(--textTitleColor);
    
}



.card {

    width: 420px;
    border-radius: 30px;
    overflow: hidden;
    background-color: #FFF;
    display: flex;
    flex-flow: column;
    box-shadow: 0px 0px 20px 5px #0002;
}

.card .content-wrapper {
    padding: 20px 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.card .text-title {
    margin-top: var(--margin);
    margin-bottom: var(--margin);
}

.text-title {
    color: var(--textTitleColor);
    font-weight: 900;

}

.text-description {
    color: var(--subtitlTextColor);
}

.plan-wrapper {
    margin-top: var(--margin);
    display: flex;

    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    border-radius: 10px;
    background-color: var(--cardBgColor);
    padding: 15px;
}

.plan-wrapper .plan-info-wrapper {

    display: flex;
    flex-direction: column;
    flex: 1;
    text-align: left;
    margin-left: var(--margin);
    margin-right: var(--margin);
}

.btn-primary {
    border: none;
    background-color: var(--primaryColor);
    color: #FFF;
    padding: 15px 15px;
    border-radius: 10px;
    box-shadow: 0px 5px 20px 2px hsl(224, 23%, 75%);
    font-weight: 700;
    cursor: pointer;
}

.btn-link {
    background-color: transparent;
    border: none;
    color: var(--subtitlTextColor);
    font-weight: 700;
    cursor: pointer;
    
}


.card #proceed-btn {
    width: 100%;
    margin-top: var(--margin);
    margin-bottom: var(--margin);
    ;

}

.card #cancel-btn {
    margin-bottom: var(--margin);
}

/* mobile */
@media (max-width:375px){
    body{
     background-image: url('/images/pattern-background-mobile.svg');
     
    }
    
}


@media (min-width:476px) {
    
}

